[Testimonial] Fix squished avatar (#443)

--- a/packages/react/src/Testimonial/Testimonial.module.css
+++ b/packages/react/src/Testimonial/Testimonial.module.css
@@ -79,6 +79,10 @@
   flex-direction: column;
 }
 
+.Testimonial-avatar {
+  flex: none;
+}
+
 .Testimonial-from {
   font-weight: var(--base-text-weight-semibold);
 }
